Javascript Assignment Release for Review

--- a/CSS/registration.css
+++ b/CSS/registration.css
@@ -50,7 +50,8 @@
     padding: 40px 0px 15px 0px;
 }
 
-#registrationform {
+#registrationform,
+#uregistrationform {
     width: 300px;
     margin: auto;
     text-align: left;
