--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -103,7 +103,8 @@
     margin: 5px 5px 5px 5px;
 }
 
-.main #searchopn {
+.main #searchcat,
+#searchstatus {
     width: 184px;
     height: 30px;
     border-radius: 5px;
@@ -176,12 +177,13 @@
     float: right;
 }
 
-#remendrdate {
+#remendrdate,
+#regis_sec {
     display: none;
 }
 
-.addtodo .regis_sec {
-    margin-top: 50px;
+.main_cont .regis_sec {
+    margin-top: 0px;
 }
 
 .addtodo {
