--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -135,7 +135,7 @@
     width: 130px;
     height: auto;
     border-radius: 50%;
-    margin: 20px 0px 20px 80px;
+    margin: 80px 0px 20px 80px;
 }
 
 .pro_row .forminp {
@@ -188,6 +188,11 @@
 
 .addtodo {
     display: none;
+    margin-top: 50px;
+}
+
+#addtodo h2 {
+    font-size: 40px;
 }
 
 .edittodo {
