--- a/CSS/registration.css
+++ b/CSS/registration.css
@@ -51,6 +51,7 @@
 }
 
 #registrationform,
+#eregistrationform,
 #uregistrationform {
     width: 300px;
     margin: auto;
@@ -82,7 +83,7 @@
 }
 
 .formrdio input {
-    width: 50px;
+    width: 40px;
     height: 15px;
     border-radius: 4px;
     border-width: 1px;
