--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -33,6 +33,7 @@ body {
     border: solid;
     border-width: 1px;
     border-color: grey;
+    min-height: 600px;
 }
 
 .main .header {
@@ -59,15 +60,17 @@ body {
     float: left;
     width: 24.9%;
     text-align: left;
-    border-right: solid;
-    border-width: 1px;
-    border-color: grey;
     padding: 10px 0px 0px 0px;
+    min-height: 500px;
 }
 
 .main .containt {
     float: right;
     width: 75%;
+    min-height: 512px;
+    border-left: solid;
+    border-width: 1px;
+    border-color: grey;
 }
 
 .main .header .button {
@@ -117,9 +120,8 @@ body {
 }
 
 .profile {
-    width: 100%;
-    text-align: center;
     display: none;
+    margin-bottom: 40px;
 }
 
 .pro_row {
@@ -151,7 +153,7 @@ body {
 }
 
 .formrdio input {
-    width: 50px;
+    width: 40px;
     height: 15px;
     border-radius: 4px;
     border-width: 1px;
